--- a/examples/shadow_cast_bug.html
+++ b/examples/shadow_cast_bug.html
@@ -61,6 +61,7 @@
                 plane.rotation.x = - Math.PI / 2;
                 plane.position.set( 0, - 5, 0 );
                 plane.receiveShadow = true;
+				//plane.castShadow = true;
                 scene.add( plane );
             //	plane.renderOrder = - 1; // un-comment to show shadow on plane <=========
 
